[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E203", "E501"]
exclude = [
	"external",
	"luke.egg-info",
]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["luke"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
exclude = ["external"]
ignore_missing_imports = true  # Relaxed for optional chemistry deps


