[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
# Use extend-exclude so we inherit Ruff's default ignore list (.venv, build, dist, etc.)
extend-exclude = [
	"external",
	"luke.egg-info",
	".venv",
	"venv",
	"build",
	"dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E203", "E501", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["luke"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
exclude = ["external"]
ignore_missing_imports = true  # Relaxed for optional chemistry deps


